          before checking for PI_BOARD
        - added missing ICs and sensors to the test section in POD, and added
          information on newly added test environment variables
        - change a markdown format to POD format in FAQ (fixes #81)
        - fix wire colour for the latch pin on the shift register in the test
          platform diagrams (fixes #80)

2.3629  2018-10-03
        - added io_led() and pwr_led() to modify the two LED status' for visual
          identification of which Pi hardware board we're currently working on
          (closes #75)
        - added label() to provide the facility to add a name/label to your Pi
          object
        - fix GPIO Expander example in FAQ not rendering as code (closes #76)
        - fix erroneous apostrophe in test section in FAQ (closes #79)
        - update unit test pins in use in t/README file (closes #77)
        - bumped prereq RPi::I2C to 2.3607, due to error message and other
          cosmetic fixes corrected in that distribution
        - bump prereq of RPi::GPIOExpander::MCP23017 to 1.00
        - bump prereq of RPi::DHT11 hygrometer distribution to 1.04
        - bump prereq of RPi::SPI to 2.3609

2.3628  2018-06-07
        - added support for the MCP23017 GPIO expander chip via the
          RPi::GPIOExpander::MCP23017 distribution (closes #73)
        - bumped version of RPi::Const prereq to 1.04

2.3627  2018-05-29
        - added "Usage" section for RTC in FAQ
        - added t/64-i2c_exceptions.t to catch a particular panic, and test
          fixed exceptions in that dist
        - bumped prereq of RPi::I2C to 2.3606 that includes above fixes/changes
        - cleanup and slight modifications/updates to POD

2.3626  2018-05-29
        - fix POD head level for SETUP's Serial configuration
        - provide more descriptive scenarios when to disable _fatal_exit()
          (closes #68)
        - remove statement in POD where we claimed that the BCM pin numbers were