@@ -11,7 +11,7 @@ WriteMakefile(
     LIBS              => [],
     DEFINE            => '',
     INC               => '-I.',
-    EXE_FILES         => [ map "bin/$_", qw(pinmap) ],
+    EXE_FILES         => [ map "bin/$_", qw(pinmap pidentify) ],
     META_MERGE => {
         'meta-spec' => { version => 2 },
         resources   => {
